2012-03-11  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/dl-osinfo.h (_dl_setup_stack_chk_guard):
	Fix masking out of the most significant byte of random value used.

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

2012-03-10  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2012-03-09  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/dl-machine.h (elf_machine_rela): Protect local
	variables with appropriate CPP guards.
	* sysdeps/sparc/sparc32/dl-trampoline.S: Propagate the stack_ptr from the
	frame pointer, not the stack pointer.  Correct layout comments.  Fix test
	on resulting framesize and the management of the outregs buffer for pltexit.
	Preserve floating point return values across _dl_call_pltexit call.
	* sysdeps/sparc/sparc64/dl-trampoline.S: Fix test on resulting
	framesize and the management of the outregs buffer for pltexit.
	Preserve floating point return values across _dl_call_pltexit
	call.
	* elf/sotruss-lib.c (la_sparc32_gnu_pltenter, la_sparc64_gnu_pltenter,
	la_sparc32_gnu_pltexit, la_sparc64_gnu_pltexit): New functions.
	(print_exit): Fix format string for return register value.

2012-03-10  Joseph Myers  <joseph@codesourcery.com>

	* sunrpc/Makefile (others): Add rpcgen.
	($(objpfx)rpcgen): Remove special build rule and dependency on
	libc.
	* sunrpc/rpcgen.c: New file.

2012-03-09  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #13673]
	* posix/bug-regex33.c: Replace FSF snail mail address with URL.
	* stdio-common/bug-vfprintf-nargs.c: Likewise.
	* sysdeps/i386/crti.S: Likewise.
	* sysdeps/i386/crtn.S: Likewise.
	* sysdeps/powerpc/powerpc32/crti.S: Likewise.
	* sysdeps/powerpc/powerpc32/crtn.S: Likewise.
	* sysdeps/powerpc/powerpc64/crti.S: Likewise.
	* sysdeps/powerpc/powerpc64/crtn.S: Likewise.
	* sysdeps/sh/crti.S: Likewise.
	* sysdeps/sh/crtn.S: Likewise.
	* sysdeps/x86_64/fpu/e_expf.S: Likewise.

	[BZ #13673]